<resources>
    <string name="app_name">PFAMonument</string>
    <string name="profil">Profil</string>
    <string name="quiz">Quiz</string>
    <string name="accueil">Accueil</string>
    <string name="favoris">Favoris</string>
    <string name="map">Map</string>
    <string name="camera">Caméra</string>
    <string name="logout">Déconnexion</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
